# skin-api-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.gitea/workflows/: ci.yml  release.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: generate_poses.py
src/createrington_skin_api/: __init__.py  _core.py  _http.py  _poses.py  async_client.py  client.py  errors.py  poses.py
tests/: test_async_client.py  test_client.py
