[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "createrington-skin-api"
dynamic = ["version"]
description = "Official Python client for the Createrington Skin API."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Matej Hozlar" }]
keywords = ["minecraft", "skin", "render", "createrington", "api-client"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://api.createrington.com"
Repository = "https://github.com/matejhozlar/skin-api-python"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.8",
]

[tool.hatch.version]
path = "src/createrington_skin_api/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/createrington_skin_api"]

[tool.hatch.build.targets.sdist]
include = ["src", "scripts", "tests", "README.md", "CHANGELOG.md", "LICENSE"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "scripts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
